ecere: Fixed Linux warnings; Fixed DualPipe with environment

--- a/ide/locale/ide.pot
+++ b/ide/locale/ide.pot
@@ -514,11 +514,6 @@ msgstr "Condition"
 msgid "Configurations: "
 msgstr "Configurations: "
 
-#: ./src/designer/CodeEditor.ec:38
-#: ./src/designer/CodeEditor.ec:39
-msgid "Consolas"
-msgstr "Consolas"
-
 #: ./src/ProjectSettings.ec:2117
 msgid "Console Application"
 msgstr "Console Application"
@@ -536,6 +531,11 @@ msgstr "Couldn't create file."
 #: ./src/debugger/Debugger.ec:2425
 msgid "Couldn't read memory"
 msgstr "Couldn't read memory"
+
+#: ./src/designer/CodeEditor.ec:35
+#: ./src/designer/CodeEditor.ec:36
+msgid "Courier New"
+msgstr "Courier New"
 
 #: ./src/dialogs/NewProjectDialog.ec:219
 msgid "Create Form"
