--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-The Ecere SDK v0.44 - http://ecere.com
+The Ecere SDK v0.44.04 - http://ecere.com
 
 Free Open Source Software released under the New BSD license.
 
@@ -51,7 +51,7 @@ Daily-built Ubuntu Debian packages are available from our Ubuntu PPA:
 To build from source, simply type make (mingw32-make on Windows).
 
 It should build fine on Linux, on Windows with MinGW or MinGW-w64,
-on Mac OS X with Xcode command line tools installed or on FreeBSD.
+on Mac OS X with Xcode command line tools installed or on FreeBSD (with gmake).
 
 Executables can also be deployed to the Android platform using the Android NDK.
 
