ecere: Android fixes; i18n update - gui: Fixed issue with rootWindow not being set properly - Fixed uninitialized values on Android causing bad window area awareness; - i18n: Added missing context for "Imp" and "Exp" strings

--- a/ecere/locale/ecere.pot
+++ b/ecere/locale/ecere.pot
@@ -312,6 +312,7 @@ msgid "Error writing file"
 msgstr "Error writing file"
 
 #: ./src/sys/File.ec:318
+msgctxt "Export"
 msgid "Exp"
 msgstr "Exp"
 
@@ -411,6 +412,7 @@ msgid "Image Files (*.jpg, *.jpeg, *.bmp, *.pcx, *.png, *.gif)"
 msgstr "Image Files (*.jpg, *.jpeg, *.bmp, *.pcx, *.png, *.gif)"
 
 #: ./src/sys/File.ec:294
+msgctxt "Import"
 msgid "Imp"
 msgstr "Imp"
 
