--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 ecere-sdk (0.44.04-0ubuntu1) raring; urgency=low
 
+  * Various Bug Fixes
+  * MinGW-w64 Support
   * 64 Bit Support
   * Basic Android Support
+  * Improved FreeBSD Support
+  * Improved OS X Support
 
- -- Jerome St-Louis <jerstlouis@gmail.com>  Sun, 06 Mar 2013 06:00:00 -0500
+ -- Jerome St-Louis <jerstlouis@gmail.com>  Sun, 10 Mar 2013 12:00:00 -0400
 
 ecere-sdk (0.44.03-0ubuntu1) raring; urgency=low
 
