NEWS, README; updated links for renaming of ecere/sdk github repository to ecere/ecere-sdk

--- a/NEWS
+++ b/NEWS
@@ -59,7 +59,7 @@ Ecere SDK 0.44 "Ryoanji" (March 13, 2012)
  ( May 2011 )
 
    * We adopted Git as our version control system.
-   * Our source repository is hosted on GitHub at http://github.com/ecere/sdk
+   * Our source repository is hosted on GitHub at http://github.com/ecere/ecere-sdk
 ----------------------------------------
 Ecere SDK 0.44 preview 1 (February 4, 2010)
 
