--- a/README
+++ b/README
@@ -89,7 +89,8 @@ descriptive info has been added yet.
 
  * COMMUNITY *
 
-Git Repository @ http://github.com/ecere/ecere-sdk/  ( git://github.com/ecere/ecere-sdk.git )
+Git Repository @ http://github.com/ecere/ecere-sdk/
+                ( git://github.com/ecere/ecere-sdk.git )
 Support forums @ http://ecere.com/forums
 Bug tracker    @ http://ecere.com/mantis
 IRC            @ #ecere on irc.freenode.net
