--- a/installer/locale/Installer.pot
+++ b/installer/locale/Installer.pot
@@ -10,178 +10,413 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Basepath: ../\n"
 
-#: ./src/installer.ec:711
+#: ./src/installer.ec:678
 msgid " Destination Folder"
 msgstr " Destination Folder"
 
-#: ./src/installer.ec:806
+#: ./src/installer.ec:331
+msgid "API Reference"
+msgstr "API Reference"
+
+#: ./src/installer.ec:614
+msgid "Add Ecere binaries location to the system environment path"
+msgstr "Add Ecere binaries location to the system environment path"
+
+#: ./src/installer.ec:403
+#: ./src/installer.ec:614
+msgid "Add Ecere binaries location to the user environment path"
+msgstr "Add Ecere binaries location to the user environment path"
+
+#: ./src/installer.ec:404
+msgid "Add MinGW to the user environment path"
+msgstr "Add MinGW to the user environment path"
+
+#: ./src/installer.ec:618
+msgid "Add TDM-GCC/MinGW-w64 to the system environment path"
+msgstr "Add TDM-GCC/MinGW-w64 to the system environment path"
+
+#: ./src/installer.ec:618
+msgid "Add TDM-GCC/MinGW-w64 to the user environment path"
+msgstr "Add TDM-GCC/MinGW-w64 to the user environment path"
+
+#: ./src/installer.ec:610
+msgid "Add binaries location to the system environment paths"
+msgstr "Add binaries location to the system environment paths"
+
+#: ./src/installer.ec:422
+#: ./src/installer.ec:610
+msgid "Add binaries location to the user environment paths"
+msgstr "Add binaries location to the user environment paths"
+
+#: ./src/installer.ec:356
+msgid "Additional Support"
+msgstr "Additional Support"
+
+#: ./src/installer.ec:421
+msgid "Associate the Ecere IDE with Supported File Types"
+msgstr "Associate the Ecere IDE with Supported File Types"
+
+#: ./src/installer.ec:391
+msgid "Associate with 3D Studio Model Files (*.3ds)"
+msgstr "Associate with 3D Studio Model Files (*.3ds)"
+
+#: ./src/installer.ec:388
+msgid "Associate with C files (*.c, *.h)"
+msgstr "Associate with C files (*.c, *.h)"
+
+#: ./src/installer.ec:389
+msgid "Associate with C++ Files (*.cpp, *.hpp, *.cc, *.hh, *.cxx, *.hxx)"
+msgstr "Associate with C++ Files (*.cpp, *.hpp, *.cc, *.hh, *.cxx, *.hxx)"
+
+#: ./src/installer.ec:386
+msgid "Associate with Ecere Project Files (*.epj)"
+msgstr "Associate with Ecere Project Files (*.epj)"
+
+#: ./src/installer.ec:392
+msgid "Associate with Image Files (*.png, *.jpg, *.pcx, *.bmp, *.gif)"
+msgstr "Associate with Image Files (*.png, *.jpg, *.pcx, *.bmp, *.gif)"
+
+#: ./src/installer.ec:387
+msgid "Associate with eC Files (*.ec, *.eh)"
+msgstr "Associate with eC Files (*.ec, *.eh)"
+
+#: ./src/installer.ec:390
+msgid "Associate with text files (*.txt)"
+msgstr "Associate with text files (*.txt)"
+
+#: ./src/installer.ec:260
+msgid "Audio"
+msgstr "Audio"
+
+#: ./src/installer.ec:773
 msgid "Avail. Space"
 msgstr "Avail. Space"
 
-#: ./src/installer.ec:665
+#: ./src/installer.ec:290
+msgid "Binary Utils"
+msgstr "Binary Utils"
+
+#: ./src/installer.ec:338
+msgid "Binutils Docs"
+msgstr "Binutils Docs"
+
+#: ./src/installer.ec:577
 msgid "By installing the Ecere SDK, you agree to the                                         ."
 msgstr "By installing the Ecere SDK, you agree to the                                         ."
 
-#: ./src/installer.ec:707
-#: ./src/installer.ec:1041
+#: ./../ide/src/licensing.ec:58
+msgid "By using it you agree to the terms and conditions of their individual licenses."
+msgstr "By using it you agree to the terms and conditions of their individual licenses."
+
+#: ./src/installer.ec:311
+msgid "C++ Compiler"
+msgstr "C++ Compiler"
+
+#: ./src/installer.ec:674
+#: ./src/installer.ec:1067
 msgid "Cancel"
 msgstr "Cancel"
 
-#: ./src/installer.ec:802
+#: ./src/installer.ec:769
 msgid "Choose Components, Locations and Install Options"
 msgstr "Choose Components, Locations and Install Options"
 
-#: ./src/installer.ec:789
-msgid "Choose in which folder to install the ECERE SDK, which features\nof the SDK to install, as well as where to install program icons."
-msgstr "Choose in which folder to install the ECERE SDK, which features\nof the SDK to install, as well as where to install program icons."
+#: ./src/installer.ec:756
+msgid "Choose in which folder to install the Ecere SDK, which features\nof the SDK to install, as well as where to install program icons."
+msgstr "Choose in which folder to install the Ecere SDK, which features\nof the SDK to install, as well as where to install program icons."
 
-#: ./src/installer.ec:1224
+#: ./src/installer.ec:1261
 msgid "Close"
 msgstr "Close"
 
-#: ./src/installer.ec:803
+#: ./src/installer.ec:770
 msgid "Component"
 msgstr "Component"
 
-#: ./src/installer.ec:1248
-msgid "Configuring ECERE IDE..."
-msgstr "Configuring ECERE IDE..."
+#: ./src/installer.ec:1285
+msgid "Configuring Ecere IDE..."
+msgstr "Configuring Ecere IDE..."
 
-#: ./src/installer.ec:804
+#: ./src/installer.ec:355
+msgid "Core SDK Files"
+msgstr "Core SDK Files"
+
+#: ./src/installer.ec:302
+#: ./src/installer.ec:303
+msgid "Data Access"
+msgstr "Data Access"
+
+#: ./src/installer.ec:261
+msgid "Database"
+msgstr "Database"
+
+#: ./src/installer.ec:419
+msgid "Desktop Icon"
+msgstr "Desktop Icon"
+
+#: ./src/installer.ec:771
 msgid "Destination Folder"
 msgstr "Destination Folder"
 
+#: ./src/installer.ec:357
+msgid "Documentation"
+msgstr "Documentation"
+
+#: ./src/installer.ec:330
+msgid "Ecere Book"
+msgstr "Ecere Book"
+
+#: ./src/installer.ec:333
+msgid "Ecere Coursework"
+msgstr "Ecere Coursework"
+
+#: ./src/installer.ec:306
+msgid "Ecere Extras"
+msgstr "Ecere Extras"
+
 #: ./src/installer.ec:4
-msgid "Ecere SDK v0.44 -- built on March 13, 2012 "
-msgstr "Ecere SDK v0.44 -- built on March 13, 2012 "
+msgid "Ecere SDK v0.44.10 -- built on March 2nd, 2014 "
+msgstr "Ecere SDK v0.44.10 -- built on March 2nd, 2014 "
 
-#: ./src/installer.ec:543
-#: ./src/installer.ec:1021
-msgid "Ecere Software Development Kit Setup - v0.44 \"Ryōan-ji\""
-msgstr "Ecere Software Development Kit Setup - v0.44 \"Ryōan-ji\""
+#: ./src/installer.ec:433
+#: ./src/installer.ec:1045
+msgid "Ecere Software Development Kit Setup - v0.44.10 \"Ryōan-ji\" 64 Bit Edition"
+msgstr "Ecere Software Development Kit Setup - v0.44.10 \"Ryōan-ji\" 64 Bit Edition"
 
-#: ./src/installer.ec:1559
+#: ./src/installer.ec:332
+msgid "Ecere Tutorials"
+msgstr "Ecere Tutorials"
+
+#: ./src/installer.ec:304
+#: ./src/installer.ec:305
+msgid "Ecere Vanilla"
+msgstr "Ecere Vanilla"
+
+#: ./src/installer.ec:1655
 msgid "Finish"
 msgstr "Finish"
 
-#: ./../ide/src/IDESettings.ec:624
+#: ./src/installer.ec:335
+msgid "G++ Docs"
+msgstr "G++ Docs"
+
+#: ./src/installer.ec:334
+msgid "GCC Docs"
+msgstr "GCC Docs"
+
+#: ./src/installer.ec:336
+msgid "GDB Docs"
+msgstr "GDB Docs"
+
+#: ./src/installer.ec:287
+msgid "GNU C Compiler"
+msgstr "GNU C Compiler"
+
+#: ./../ide/src/IDESettings.ec:699
 msgid "GNU Compiler Collection (GCC) / GNU Make"
 msgstr "GNU Compiler Collection (GCC) / GNU Make"
 
-#: ./../ide/src/licensing.ec:153
+#: ./src/installer.ec:288
+msgid "GNU Debugger"
+msgstr "GNU Debugger"
+
+#: ./src/installer.ec:291
+msgid "GNU Make"
+msgstr "GNU Make"
+
+#: ./src/installer.ec:308
+#: ./src/installer.ec:309
+msgid "GNU Regexp"
+msgstr "GNU Regexp"
+
+#: ./src/installer.ec:264
+msgid "GUI & Graphics"
+msgstr "GUI & Graphics"
+
+#: ./src/installer.ec:263
+msgid "Games"
+msgstr "Games"
+
+#: ./../ide/src/licensing.ec:166
 msgid "I agree"
 msgstr "I agree"
 
-#: ./../ide/src/licensing.ec:140
+#: ./../ide/src/licensing.ec:153
 msgid "I don't agree"
 msgstr "I don't agree"
 
-#: ./src/installer.ec:696
-#: ./src/installer.ec:1035
+#: ./src/installer.ec:663
+#: ./src/installer.ec:1061
 msgid "Install"
 msgstr "Install"
 
-#: ./src/installer.ec:1229
+#: ./src/installer.ec:417
+msgid "Install for All Users"
+msgstr "Install for All Users"
+
+#: ./src/installer.ec:1266
 msgid "Installation Cancelled"
 msgstr "Installation Cancelled"
 
-#: ./src/installer.ec:1228
+#: ./src/installer.ec:1265
 msgid "Installation Cancelled."
 msgstr "Installation Cancelled."
 
-#: ./src/installer.ec:1563
+#: ./src/installer.ec:1659
 msgid "Installation Complete"
 msgstr "Installation Complete"
 
-#: ./src/installer.ec:1562
+#: ./src/installer.ec:1658
 msgid "Installation Complete."
 msgstr "Installation Complete."
 
-#: ./src/installer.ec:330
+#: ./src/installer.ec:212
 msgid "Installing %s..."
 msgstr "Installing %s..."
 
-#: ./src/installer.ec:1471
+#: ./src/installer.ec:1550
 msgid "Installing Desktop Icon..."
 msgstr "Installing Desktop Icon..."
 
-#: ./src/installer.ec:1490
+#: ./src/installer.ec:1578
 msgid "Installing Quicklaunch Icon..."
 msgstr "Installing Quicklaunch Icon..."
 
-#: ./src/installer.ec:1387
+#: ./src/installer.ec:1464
 msgid "Installing Start Menu Icons..."
 msgstr "Installing Start Menu Icons..."
 
-#: ./src/installer.ec:1067
-msgid "Installing the ECERE SDK"
-msgstr "Installing the ECERE SDK"
+#: ./src/installer.ec:1093
+msgid "Installing the Ecere SDK"
+msgstr "Installing the Ecere SDK"
 
-#: ./../ide/src/IDESettings.ec:627
+#: ./../ide/src/licensing.ec:38
+msgid "License Agreements"
+msgstr "License Agreements"
+
+#: ./src/installer.ec:337
+msgid "Make Docs"
+msgstr "Make Docs"
+
+#: ./../ide/src/IDESettings.ec:702
 msgid "Microsoft Visual Studio 2005 (8.0) Compiler"
 msgstr "Microsoft Visual Studio 2005 (8.0) Compiler"
 
-#: ./../ide/src/IDESettings.ec:628
+#: ./../ide/src/IDESettings.ec:703
 msgid "Microsoft Visual Studio 2008 (9.0) Compiler"
 msgstr "Microsoft Visual Studio 2008 (9.0) Compiler"
 
-#: ./../ide/src/IDESettings.ec:630
+#: ./../ide/src/IDESettings.ec:705
 msgid "Microsoft Visual Studio 2010 (10.0) Compiler"
 msgstr "Microsoft Visual Studio 2010 (10.0) Compiler"
 
-#: ./src/installer.ec:1054
+#: ./src/installer.ec:289
+msgid "MinGW-w64 Runtime"
+msgstr "MinGW-w64 Runtime"
+
+#: ./src/installer.ec:265
+msgid "Miscellaneous"
+msgstr "Miscellaneous"
+
+#: ./src/installer.ec:266
+msgid "Networking"
+msgstr "Networking"
+
+#: ./src/installer.ec:1080
 msgid "Please wait while the Ecere Software Development Kit is being installed."
 msgstr "Please wait while the Ecere Software Development Kit is being installed."
 
-#: ./../ide/src/IDESettings.ec:626
+#: ./../ide/src/IDESettings.ec:701
 msgid "Portable C Compiler / GNU Make"
 msgstr "Portable C Compiler / GNU Make"
 
-#: ./src/installer.ec:1317
+#: ./src/installer.ec:420
+msgid "Quicklaunch Icon"
+msgstr "Quicklaunch Icon"
+
+#: ./src/installer.ec:1369
 msgid "Registering uninstaller..."
 msgstr "Registering uninstaller..."
 
-#: ./src/installer.ec:805
+#: ./src/installer.ec:772
 msgid "Req. Space"
 msgstr "Req. Space"
 
-#: ./src/installer.ec:1511
+#: ./src/installer.ec:1607
 msgid "Resgistering File Types..."
 msgstr "Resgistering File Types..."
 
-#: ./src/installer.ec:557
+#: ./src/installer.ec:283
+#: ./src/installer.ec:284
+msgid "Runtime Library"
+msgstr "Runtime Library"
+
+#: ./src/installer.ec:358
+msgid "Samples"
+msgstr "Samples"
+
+#: ./src/installer.ec:448
 msgid "Select a new location"
 msgstr "Select a new location"
 
-#: ./src/installer.ec:774
+#: ./src/installer.ec:741
 msgid "Select icons to install, file\nassociations, and system\nenvironment modifications:"
 msgstr "Select icons to install, file\nassociations, and system\nenvironment modifications:"
 
-#: ./src/installer.ec:753
+#: ./src/installer.ec:720
 msgid "Select the default root\nfolder where to install\nall components:"
 msgstr "Select the default root\nfolder where to install\nall components:"
 
-#: ./src/installer.ec:766
+#: ./src/installer.ec:733
 msgid "Select the optional\ncomponents you wish\nto install:\n\nYou may customize the\ninstall location for each\nof them, or use the default\nbased on the main\ndestination folder."
 msgstr "Select the optional\ncomponents you wish\nto install:\n\nYou may customize the\ninstall location for each\nof them, or use the default\nbased on the main\ndestination folder."
 
-#: ./src/installer.ec:778
+#: ./src/installer.ec:745
 msgid "Space Required: "
 msgstr "Space Required: "
 
-#: ./src/installer.ec:1564
+#: ./src/installer.ec:418
+msgid "Start Menu Group"
+msgstr "Start Menu Group"
+
+#: ./src/installer.ec:1660
 msgid "Thank you for using the Ecere SDK."
 msgstr "Thank you for using the Ecere SDK."
 
-#: ./src/installer.ec:1230
+#: ./src/installer.ec:1267
 msgid "The installation was not completed."
 msgstr "The installation was not completed."
 
-#: ./../ide/src/IDESettings.ec:625
+#: ./../ide/src/licensing.ec:53
+msgid "This program is based on these free open source software components."
+msgstr "This program is based on these free open source software components."
+
+#: ./src/installer.ec:268
+msgid "Threading"
+msgstr "Threading"
+
+#: ./../ide/src/IDESettings.ec:700
 msgid "Tiny C Compiler / GNU Make"
 msgstr "Tiny C Compiler / GNU Make"
 
-#: ./src/installer.ec:670
+#: ./src/installer.ec:340
+msgid "UPX Docs"
+msgstr "UPX Docs"
+
+#: ./src/installer.ec:267
+msgid "WIA Scanning"
+msgstr "WIA Scanning"
+
+#: ./src/installer.ec:285
+#: ./src/installer.ec:286
+msgid "eC Compiler"
+msgstr "eC Compiler"
+
+#: ./src/installer.ec:339
+msgid "gnurx Docs"
+msgstr "gnurx Docs"
+
+#: ./src/installer.ec:582
 msgid "terms and conditions"
 msgstr "terms and conditions"
 
